--- a/portfolio.css
+++ b/portfolio.css
@@ -46,7 +46,7 @@
 }
 
 .intro span{
-    color: indianred;
+    color: #E31B6D;
 }
 
 /*.arrow-button{*/
@@ -112,7 +112,8 @@
 }
 
 .slide:hover{
-    background:#00bfff;
+    background:#04C2C9;
+    border: none;
 }
 
 .slide:hover:before{
@@ -140,5 +141,48 @@
 }
 .wrap div nav {
     border-bottom-width: 3px;
-    border-bottom-color: deepskyblue;
+    border-bottom-color: #04C2C9;
+}
+
+.navbar-color{
+    background-color: #1B242F;
+}
+
+.navbar-inverse .navbar-nav > li > a{
+    color: white;
+    font-size: 15px;
+}
+.navbar-inverse .navbar-nav > .active > a,
+.navbar-inverse .navbar-nav > .active > a:hover,
+.navbar-inverse .navbar-nav > .active > a:focus{
+    color: #E31B6D;
+}
+
+.navbar-inverse .navbar-nav > li > a:hover,
+.navbar-inverse .navbar-nav > li > a:focus {
+    color: #E31B6D;
+}
+.navbar-inverse .navbar-nav > .active  {
+    color: #E31B6D;
+    /*background: #d65c14;*/
+}
+.navbar-inverse .navbar-nav > .open > a,
+.navbar-inverse .navbar-nav > .open > a:hover,
+.navbar-inverse .navbar-nav > .open > a:focus {
+    color: #E31B6D;
+    /*background-color: #d65c14;*/
+}
+
+.btn-default{
+    color: white;
+    border: none;
+    float: right;
+    background-color: #04C2C9;
+}
+
+.btn-default:hover{
+    color: #1B242F;
+    border: none;
+    /*float: right;*/
+    background-color: #04C2C9;
 }
