--- a/portfolio.css
+++ b/portfolio.css
@@ -15,7 +15,9 @@
     /*filter: blur(5px);*/
 
 
-
+html { 
+	overflow-y: hidden; 
+	}
 
 .intro:before {
     content: "";
@@ -252,7 +254,7 @@
   width: 300px; 
   height: 173.21px;
   margin: 86.60px 0;
-  background-image: url(http://csshexagon.com/img/meow.jpg);
+  background-image: url(myPicture.jpg);
   background-size: auto 346.4102px;
   background-position: center;
   transform: rotateZ(-90deg);
@@ -314,4 +316,10 @@
   height: 173.2051px;
   z-index: 2;
   background: inherit;
+}
+.match-text{
+	margin-left: -12px;
+}
+.col-md-6{
+	margin-top: -10px;
 }
